FAQs text overlap fix
Text would overflow from button in FAQs section in mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,9 @@ div.content {
 	padding-top: 16px;
 	padding-bottom: 16px;
 	
+	width: 100%;
+	white-space:normal;
+	
 	color: #000;
 	font-size: 20px;
 	font-weight: bold;
